Update and rename index.html to Dota Match winner.html

--- a/Dota Match winner.html
+++ b/Dota Match winner.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <h1>Button Click Example with API Call</h1>
+    <h1>Get Match Winner</h1>
     <input type="text" id="inputField" placeholder="Enter match ID...">
     <button onclick="processInput()">Get Match Details</button>
     <br>
